    added "info" - optional additional information that can be associated with shelves, books and pages
    informatin is stored in .html files located in the '/info' folder
    "info" key in used in the 'library.yml' for specifying the path to the corresponding .html file
    data files ('.yml') are moved from '/' to '/data' folder
    "path" key is replaced by "data" in 'library.yml'
  new data (thanks to Valentyn Volkov, University of Southern Denmark, for submitting data in YAML format!)
    main/Au/Yakubovsky-25nm.yml
    main/Au/Yakubovsky-53nm.yml
    main/Au/Yakubovsky-117nm.yml
  new data (thanks to Giovanni Perotto, Istituto Italiano di Tecnologia, Genova, Italy)
    other/silk/Bombyx mori/Perotto.yml
    other/silk/Bombyx mori/Perotto-uncrystallized.yml
    other/silk/Bombyx mori/Perotto-crystallized.yml
    other/silk/Antheraea mylitta/Perotto.yml
    other/silk/Samia ricini/Perotto.yml
    other/silk/Antheraea assamensis/Perotto.yml
  new data
    other/human body/blood/Rowe.yml (thanks to David Rowe, University of Southampton, UK, for providing numerical data!)
  updates
    other/human body/liver/Giannios.yml: references
  bug fixes
    added a new line at the end of each file (thanks to Thibault North!)
    page id's for Lemarchand's Au data changed to 'Lemarchand-3.96nm', 'Lemarchand-4.62nm', 'Lemarchand-5.77nm', and 'Lemarchand-11.7' (was simply 'Lemarcand' in all cases)
  miscellaneous
    colons in id's of several pages replaced by dashes (e.g. Mg:LiTaO3 -> Mg-LiTaO3)

============================== 2017-09-05 ==============================
  
  new data
    main/Ag/Wu.yml  (thanks to Yanwen Wu, University of Texas at Austin, TX, USA!)
    other/perovskite/CH3NH3PbI3/Ball.yml (thanks to Sam Stranks, University of Cambridge, UK!)
    other/intermetallics/AuAl2/Supansomboon.yml (thans to Telmo for submitting data in YAML format!)
  new data (thanks to Tobias König for submitting data!)
    organic/(C2H4O)n - polyvinyl alcohol/Schnepf.yml