@@ -1,0 +1,155 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "R. J. Mathar. Refractive index of humid air in the infrared: model fits, <a href=\"https://doi.org/10.1088/1464-4258/9/5/008\"><i>J. Opt. A: Pure Appl. Opt.</i> <b>9</b>, 470-476 (2007)</a><br>[<a href=\"https://github.com/polyanskiy/refractiveindex.info-scripts/blob/master/scripts/Mathar%202007%20-%20Air%202.8-4.2um.py\">Calculation script (Python)</a> - this can be used for calculating refractive index of humid air]"
+COMMENTS: "Dry air at 15 °C, 101.325 kPa, 370 ppm CO<sub>2</sub> content."
+DATA:
+  - type: tabulated n
+    data: |
+        2.80 1.000272874881
+        2.81 1.000272865477
+        2.82 1.000272857462
+        2.83 1.000272850682
+        2.84 1.000272844993
+        2.85 1.000272840266
+        2.86 1.000272836382
+        2.87 1.000272833232
+        2.88 1.000272830715
+        2.89 1.000272828743
+        2.90 1.000272827234
+        2.91 1.000272826112
+        2.92 1.000272825312
+        2.93 1.000272824772
+        2.94 1.000272824441
+        2.95 1.000272824268
+        2.96 1.000272824211
+        2.97 1.000272824233
+        2.98 1.000272824300
+        2.99 1.000272824384
+        3.00 1.000272824458
+        3.01 1.000272824501
+        3.02 1.000272824495
+        3.03 1.000272824425
+        3.04 1.000272824277
+        3.05 1.000272824042
+        3.06 1.000272823712
+        3.07 1.000272823280
+        3.08 1.000272822744
+        3.09 1.000272822100
+        3.10 1.000272821348
+        3.11 1.000272820488
+        3.12 1.000272819522
+        3.13 1.000272818453
+        3.14 1.000272817284
+        3.15 1.000272816021
+        3.16 1.000272814668
+        3.17 1.000272813230
+        3.18 1.000272811715
+        3.19 1.000272810129
+        3.20 1.000272808479
+        3.21 1.000272806772
+        3.22 1.000272805015
+        3.23 1.000272803217
+        3.24 1.000272801384
+        3.25 1.000272799524
+        3.26 1.000272797644
+        3.27 1.000272795753
+        3.28 1.000272793857
+        3.29 1.000272791962
+        3.30 1.000272790077
+        3.31 1.000272788207
+        3.32 1.000272786360
+        3.33 1.000272784540
+        3.34 1.000272782753
+        3.35 1.000272781005
+        3.36 1.000272779301
+        3.37 1.000272777645
+        3.38 1.000272776042
+        3.39 1.000272774495
+        3.40 1.000272773008
+        3.41 1.000272771583
+        3.42 1.000272770223
+        3.43 1.000272768931
+        3.44 1.000272767708
+        3.45 1.000272766555
+        3.46 1.000272765473
+        3.47 1.000272764462
+        3.48 1.000272763523
+        3.49 1.000272762655
+        3.50 1.000272761857
+        3.51 1.000272761127
+        3.52 1.000272760465
+        3.53 1.000272759867
+        3.54 1.000272759332
+        3.55 1.000272758856
+        3.56 1.000272758437
+        3.57 1.000272758069
+        3.58 1.000272757750
+        3.59 1.000272757474
+        3.60 1.000272757238
+        3.61 1.000272757035
+        3.62 1.000272756861
+        3.63 1.000272756709
+        3.64 1.000272756573
+        3.65 1.000272756447
+        3.66 1.000272756324
+        3.67 1.000272756197
+        3.68 1.000272756058
+        3.69 1.000272755900
+        3.70 1.000272755715
+        3.71 1.000272755494
+        3.72 1.000272755230
+        3.73 1.000272754913
+        3.74 1.000272754535
+        3.75 1.000272754087
+        3.76 1.000272753558
+        3.77 1.000272752940
+        3.78 1.000272752223
+        3.79 1.000272751396
+        3.80 1.000272750451
+        3.81 1.000272749376
+        3.82 1.000272748161
+        3.83 1.000272746795
+        3.84 1.000272745269
+        3.85 1.000272743570
+        3.86 1.000272741688
+        3.87 1.000272739612
+        3.88 1.000272737331
+        3.89 1.000272734833
+        3.90 1.000272732107
+        3.91 1.000272729141
+        3.92 1.000272725925
+        3.93 1.000272722445
+        3.94 1.000272718691
+        3.95 1.000272714652
+        3.96 1.000272710314
+        3.97 1.000272705666
+        3.98 1.000272700697
+        3.99 1.000272695394
+        4.00 1.000272689746
+        4.01 1.000272683740
+        4.02 1.000272677365
+        4.03 1.000272670608
+        4.04 1.000272663458
+        4.05 1.000272655903
+        4.06 1.000272647931
+        4.07 1.000272639529
+        4.08 1.000272630686
+        4.09 1.000272621390
+        4.10 1.000272611630
+        4.11 1.000272601392
+        4.12 1.000272590666
+        4.13 1.000272579440
+        4.14 1.000272567702
+        4.15 1.000272555440
+        4.16 1.000272542643
+        4.17 1.000272529299
+        4.18 1.000272515396
+        4.19 1.000272500924
+        4.20 1.000272485871
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
+    temperature: 15 °C
+    pressure: 101325 Pa
