@@ -1,0 +1,147 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "R. J. Mathar. Refractive index of humid air in the infrared: model fits, <a href=\"https://doi.org/10.1088/1464-4258/9/5/008\"><i>J. Opt. A: Pure Appl. Opt.</i> <b>9</b>, 470-476 (2007)</a><br>[<a href=\"https://github.com/polyanskiy/refractiveindex.info-scripts/blob/master/scripts/Mathar%202007%20-%20Air%207.5-14.1um.py\">Calculation script (Python)</a> - this can be used for calculating refractive index of humid air]"
+COMMENTS: "Dry air at 15 °C, 101.325 kPa, 370 ppm CO<sub>2</sub> content."
+DATA:
+  - type: tabulated n
+    data: |
+        7.50 1.000272702046
+        7.55 1.000272700581
+        7.60 1.000272699435
+        7.65 1.000272698557
+        7.70 1.000272697902
+        7.75 1.000272697430
+        7.80 1.000272697108
+        7.85 1.000272696907
+        7.90 1.000272696800
+        7.95 1.000272696765
+        8.00 1.000272696785
+        8.05 1.000272696842
+        8.10 1.000272696924
+        8.15 1.000272697020
+        8.20 1.000272697119
+        8.25 1.000272697215
+        8.30 1.000272697301
+        8.35 1.000272697373
+        8.40 1.000272697428
+        8.45 1.000272697461
+        8.50 1.000272697473
+        8.55 1.000272697461
+        8.60 1.000272697425
+        8.65 1.000272697365
+        8.70 1.000272697283
+        8.75 1.000272697178
+        8.80 1.000272697053
+        8.85 1.000272696907
+        8.90 1.000272696744
+        8.95 1.000272696564
+        9.00 1.000272696370
+        9.05 1.000272696164
+        9.10 1.000272695947
+        9.15 1.000272695721
+        9.20 1.000272695488
+        9.25 1.000272695251
+        9.30 1.000272695010
+        9.35 1.000272694768
+        9.40 1.000272694527
+        9.45 1.000272694287
+        9.50 1.000272694051
+        9.55 1.000272693819
+        9.60 1.000272693593
+        9.65 1.000272693374
+        9.70 1.000272693164
+        9.75 1.000272692962
+        9.80 1.000272692770
+        9.85 1.000272692588
+        9.90 1.000272692417
+        9.95 1.000272692258
+        10.00 1.000272692110
+        10.05 1.000272691975
+        10.10 1.000272691851
+        10.15 1.000272691739
+        10.20 1.000272691639
+        10.25 1.000272691551
+        10.30 1.000272691474
+        10.35 1.000272691408
+        10.40 1.000272691353
+        10.45 1.000272691308
+        10.50 1.000272691273
+        10.55 1.000272691246
+        10.60 1.000272691227
+        10.65 1.000272691215
+        10.70 1.000272691210
+        10.75 1.000272691210
+        10.80 1.000272691215
+        10.85 1.000272691223
+        10.90 1.000272691233
+        10.95 1.000272691245
+        11.00 1.000272691257
+        11.05 1.000272691267
+        11.10 1.000272691276
+        11.15 1.000272691280
+        11.20 1.000272691280
+        11.25 1.000272691274
+        11.30 1.000272691261
+        11.35 1.000272691239
+        11.40 1.000272691207
+        11.45 1.000272691163
+        11.50 1.000272691107
+        11.55 1.000272691037
+        11.60 1.000272690951
+        11.65 1.000272690849
+        11.70 1.000272690728
+        11.75 1.000272690588
+        11.80 1.000272690427
+        11.85 1.000272690244
+        11.90 1.000272690037
+        11.95 1.000272689805
+        12.00 1.000272689547
+        12.05 1.000272689262
+        12.10 1.000272688948
+        12.15 1.000272688603
+        12.20 1.000272688228
+        12.25 1.000272687819
+        12.30 1.000272687377
+        12.35 1.000272686899
+        12.40 1.000272686385
+        12.45 1.000272685834
+        12.50 1.000272685244
+        12.55 1.000272684614
+        12.60 1.000272683943
+        12.65 1.000272683230
+        12.70 1.000272682473
+        12.75 1.000272681673
+        12.80 1.000272680827
+        12.85 1.000272679934
+        12.90 1.000272678995
+        12.95 1.000272678007
+        13.00 1.000272676969
+        13.05 1.000272675882
+        13.10 1.000272674743
+        13.15 1.000272673552
+        13.20 1.000272672308
+        13.25 1.000272671010
+        13.30 1.000272669658
+        13.35 1.000272668251
+        13.40 1.000272666787
+        13.45 1.000272665266
+        13.50 1.000272663688
+        13.55 1.000272662051
+        13.60 1.000272660355
+        13.65 1.000272658600
+        13.70 1.000272656784
+        13.75 1.000272654907
+        13.80 1.000272652969
+        13.85 1.000272650969
+        13.90 1.000272648906
+        13.95 1.000272646779
+        14.00 1.000272644589
+        14.05 1.000272642335
+        14.10 1.000272640016
+SPECS:
+    n_is_absolute: true
+    λ_is_vacuum: true
+    temperature: 15 °C
+    pressure: 101325 Pa
