@@ -6952,6 +6952,12 @@
         - PAGE: Ciddor
           name: "Ciddor 1996: n 0.23-1.690 µm"
           data: "other/mixed gases/air/Ciddor.yml"
+        - PAGE: Mathar-2.8
+          name: "Mathar 2007: n 2.8-4.2 µm"
+          data: "other/mixed gases/air/Mathar-2.8.yml"
+        - PAGE: Mathar-7.5
+          name: "Mathar 2007: n 7.5-14.1 µm"
+          data: "other/mixed gases/air/Mathar-7.5.yml"
         - PAGE: Peck
           name: "Peck and Reeder 1972: n 0.185-1.7 µm"
           data: "other/mixed gases/air/Peck.yml"
