@@ -6,6 +6,9 @@
     "info" key in used in the 'library.yml' for specifying the path to the corresponding .html file
     data files ('.yml') are moved from '/' to '/data' folder
     "path" key is replaced by "data" in 'library.yml'
+    "INFO" key is replaced by "SPECS" in data files
+  new data
+    other/mixed gases/air/Mathar-2.8.yml
   new data (thanks to Valentyn Volkov, University of Southern Denmark, for submitting data in YAML format!)
     main/Au/Yakubovsky-25nm.yml
     main/Au/Yakubovsky-53nm.yml
@@ -17,8 +20,8 @@
     other/silk/Antheraea mylitta/Perotto.yml
     other/silk/Samia ricini/Perotto.yml
     other/silk/Antheraea assamensis/Perotto.yml
-  new data
-    other/human body/blood/Rowe.yml (thanks to David Rowe, University of Southampton, UK, for providing numerical data!)
+  new data (thanks to David Rowe, University of Southampton, UK, for providing numerical data!)
+    other/human body/blood/Rowe.yml
   updates
     other/human body/liver/Giannios.yml: references
   bug fixes
